--- a/styles/global.css
+++ b/styles/global.css
@@ -23,4 +23,16 @@
 
 body{
   font: var(--text-md);
+  width: 100%;
+  height: 100vh;
 } 
+
+::-webkit-scrollbar-track {
+  background-color: #1f2151;
+}
+::-webkit-scrollbar-thumb {
+  background-color: #2f3279;
+}
+::-webkit-scrollbar {
+  width: 1px;
+}
