--- a/styles/global.css
+++ b/styles/global.css
@@ -25,6 +25,12 @@ body{
   font: var(--text-md);
   width: 100%;
   height: 100vh;
+  background: url(../assets/Background.png) center no-repeat;
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 } 
 
 ::-webkit-scrollbar-track {
