--- a/styles/input.css
+++ b/styles/input.css
@@ -1,6 +1,8 @@
 .input-wrapper {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  width: 100%;
   gap: 0.5rem;
 
   label {
@@ -15,7 +17,9 @@
     border-radius: 0.5rem;
     color: var(--white);
     border: 1px solid var(--blue-900);
-    &:hover {
+    width: 100%;
+    box-sizing: border-box; 
+    &:hover, &:focus {
       border-color: var(--blue-700);
     }
   }
