--- a/styles/select.css
+++ b/styles/select.css
@@ -3,13 +3,14 @@ select {
   background: url("../assets/CaretDown.svg") no-repeat;
   background-position: calc(100% - 0.75rem) center;
   background-color: var(--blue-400);
-  padding: 1rem 1.25rem;
+  padding: 1rem 1.2rem;
   color: var(--white);
   border: 1px solid var(--blue-900);
   border-radius: 0.5rem;
-
-  &:hover {
+  width: 100%;
+  box-sizing: border-box;
+  margin-bottom: 2rem;
+  &:hover, &:focus {
     border: 1px solid var(--blue-700);
   }
-  
 }
