--- a/styles/global.css
+++ b/styles/global.css
@@ -28,7 +28,8 @@ body{
   background: url(../assets/Background.png) center no-repeat;
   background-size: cover;
   display: flex;
-  justify-content: center;
+  justify-content: start;
+  padding: 10rem;
   align-items: center;
   flex-direction: column;
 } 
