--- a/styles/layout.css
+++ b/styles/layout.css
@@ -2,7 +2,6 @@
   width: 30rem;
   height:auto;
   border-radius: 2rem;
-  overflow: hidden;
   border: 1px solid var(--blue-400);
   margin-top: 3rem;
 
@@ -18,6 +17,10 @@ form{
   display: flex;
   align-items: center;
   justify-content: center;
+  flex: 1;
+  border-top-left-radius: 2rem;
+  border-top-right-radius: 2rem;
+
 }
 
 .container{
